--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
       this html file was edited, changes were commited to the repository, and
       pushed to git hub
     </p>
+    <a href="https://github.com/nirav-v/git-init-sample" target="_blank"></a>
   </body>
 </html>
