fixing anchor element to have actual text content

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       this html file was edited, changes were commited to the repository, and
       pushed to git hub
     </p>
-    <a href="https://github.com/nirav-v/git-init-sample" target="_blank"></a>
+    <a href="https://github.com/nirav-v/git-init-sample" target="_blank">
+      git hub sample repo</a
+    >
   </body>
 </html>
