adding a lighthouse image

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   </head>
   <body>
     <h1>Hello</h1>
+    <a href="https://github.com/nirav-v/git-init-sample" target="_blank">
+      git hub sample repo</a
+    >
     <p>
       this html file was edited, changes were commited to the repository, and
       pushed to git hub
     </p>
-    <a href="https://github.com/nirav-v/git-init-sample" target="_blank">
-      git hub sample repo</a
-    >
+    <img src="/lighthouse.jpeg" alt="image of lighthouse on cliffs" />
   </body>
 </html>
